# keras-mobilenet-ssd

./: .gitignore  pyproject.toml  script.py  test.py  train.py
car_classifier/: config.py  modifiers.py  utils.py
car_classifier/custom_layers/: decode_ssd_predictions.py  default_boxes.py
car_classifier/networks/: __init__.py  ssd_mobilenetv2.py
tests/: test_car_classifier.py
